# ChangeLog for sys-fs/fuse
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/fuse/ChangeLog,v 1.24 2005/06/20 15:49:57 genstef Exp $

  20 Jun 2005; Stefan Schweizer <genstef@gentoo.org> -fuse-2.2.1.ebuild,
  fuse-2.3.0.ebuild:
  KV_DIR -> KV_OUT_DIR thanks to Georgi Georgiev <chutz@gg3.net>, removing old
  ebuilds

  08 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> fuse-2.3.0.ebuild:
  Stable on ppc.

*fuse-2.3.0 (03 Jun 2005)

  03 Jun 2005; Stefan Schweizer <genstef@gentoo.org> +fuse-2.3.0.ebuild:
  Security version bump, bug 94917 thanks to Adir Abraham <adirab@gmail.com>,
  x86 stable

  13 May 2005; Stefan Schweizer <genstef@gentoo.org> fuse-2.2.1.ebuild:
  Change homepage to make rockoo happy, bug 92509

  20 Apr 2005; Stefan Schweizer <genstef@gentoo.org>
  -files/fuse-1.4-kernel-2.6.10.patch, -fuse-1.4.ebuild, -fuse-2.1.ebuild,
  -fuse-2.2.ebuild:
  Removing old ebuilds.

  13 Apr 2005; Lars Weiler <pylon@gentoo.org> fuse-2.2.1.ebuild:
  Stable on ppc.

  13 Apr 2005; Stefan Schweizer <genstef@gentoo.org> fuse-2.2.1.ebuild:
  Version 2.2.1 stable on x86

*fuse-2.2.1 (23 Mar 2005)

  23 Mar 2005; Stefan Schweizer <genstef@gentoo.org> +fuse-2.2.1.ebuild:
  version bump thanks to Jim Faulkner <dogshu@sdf.lonestar.org> in bug 86336

  22 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org> fuse-1.4.ebuild:
  added ~amd64 to 1.4 as well. fixes #86002

  21 Feb 2005; Joseph Jezak <josejx@gentoo.org> fuse-1.4.ebuild:
  Marked ppc stable.

  13 Feb 2005; Danny van Dyk <kugelfang@gentoo.org> fuse-2.2.ebuild:
  Marked ~amd64 (BUG #77665).

*fuse-2.2 (05 Feb 2005)

  05 Feb 2005; Stefan Schweizer <genstef@gentoo.org> +fuse-2.2.ebuild,
  -fuse-2.2_pre6.ebuild:
  Version bump

*fuse-2.2_pre6 (27 Jan 2005)

  27 Jan 2005; Stefan Schweizer <genstef@gentoo.org> -fuse-2.2_pre5.ebuild,
  +fuse-2.2_pre6.ebuild:
  Version bump

*fuse-2.2_pre5 (25 Jan 2005)
