@@ -1,5 +1,5 @@
-MD5 e223a938e087980664118b32b83bdb29 fuse-2.3.0.ebuild 1458
-MD5 e95a031e09a1df96f639465e0f13fb4e ChangeLog 3751
+MD5 05f29cab01fb0e1e9eb6a505426ff3af fuse-2.3.0.ebuild 1442
+MD5 93ac2b78294fb5aa18e9832c2ed7a0b3 ChangeLog 3914
 MD5 6e89ba8198764bfd079a0cfa18dca593 metadata.xml 264
 MD5 c1ef6366ba5892111ddef08887328663 files/fuse-fix-lazy-binding.patch 398
 MD5 660a7ef5693ad494967fec4297c6dfce files/digest-fuse-2.3.0 62
